2002-01-11 Ronald Oussoren <oussoren@cistron.nl>
    * Add workaround for a feature of NSData: 
    	x = NSData.alloc()
	y = x.initWithBytes_len_(foo, bar)
      The initWithBytes_len_ call above acts like realloc(): 'x' might no
      longer be a pointer to a valid object. 

2002-01-06 Ronald Oussoren <oussoren@cistron.nl>
    * Merged the second halve of Mirko's patch: Changes to Modules/Cocoa
    * I've done some updates to make ensure that there are no patches to
      generated files.

2003-01-06  Bill Bumgarner  <bbum@codefab.com>
    * Doc/coding-style.txt: Added more information about ReST.  Some cleanup.
    * Modules/objc/module.m: Added convenience function to allocate a buffer
    via PyBuffer API (result is a buffer with a fixed length / location --
    useful with NSData and NSBIR).
    * Modules/Cocoa/NSAutoreleasePoolSupport.m: Now thread safe.

2003-01-05  Bill Bumgarner  <bbum@codefab.com>
    * test_nsbitmapimagerep.py: Data test now passes.  Deeper investigation
    revealed that there is no easy way to unify the types passed into an
    NSBIR and what is returned by -bitmapData/-getBitmapDataPlanes.  Namely,
    there is no way to produce a read/write buffer from an array.array()
    without dipping directly into the C API.

2002-01-05  Ronald Oussoren <oussoren@cistron.nl>
    * Merged initial version of GNUstep support by Mirko Viviani 
      <mirko@objectlab.org>
    * This patches only Modules/objc and setup.py. Mirko also sent
      a patch for Modules/Cocoa, I'll merge that later.

2003-01-04  Bill Bumgarner  <bbum@codefab.com>
    * CocoaApp.pbproj/TemplateInfo.plist: Added description text.
    * Modules/Cocoa/_AppKitMapping.m: Added AppKitMapping as new module in
    setup.py (why wasn't it there before?).  Added support for
    NSImageBitmapRep.  Can now create a bitmap rep w/many arg designated
    intiailizer and can invoke -getBitmapDataPlanes.   Unit test included.